# calendar-manager

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  QWEN.md  README.md  buildkitd.toml  config.example.toml  config.toml  docker-compose.yml
docs/: API_USAGE.md  CalendarSync日程管理服务_需求设计文档.md  mcp-usage-guide.md  代码审查清单.md  代码示例_项目参考实现.md  团队学习路线图.md  技术规范与最佳实践.md
docs/plans/: 2026-04-04-calendarsync-design.md  2026-04-04-calendarsync-implementation.md  2026-04-24-mcp-interface-design.md  2026-04-24-mcp-interface-implementation.md
docs/superpowers/plans/: 2025-01-09-recurrence-events.md
docs/superpowers/specs/: 2025-01-09-recurrence-events-design.md
docs/testing/: recurrence-events-test-results.md
migrations/: 001_initial_schema.sql  002_migrate_to_china_timezone.sql  003_normalize_event_timestamps.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/db/: mod.rs  pool.rs
src/db/repositories/: event.rs  mod.rs  user.rs  webhook.rs
src/handlers/: auth.rs  calendar.rs  events.rs  mod.rs  users.rs  webhooks.rs
src/ical/: generator.rs  mod.rs  tests.rs
src/mcp/: handlers.rs  mod.rs  models.rs  server.rs  transport.rs
src/models/: event.rs  mod.rs  user.rs  webhook.rs
src/services/: mod.rs  webhook.rs
templates/: base.html  index.html
tests/: api_tests.rs  mcp_create_event_test.rs  mcp_delete_event_test.rs  mcp_e2e_test.rs  mcp_get_event_test.rs  mcp_list_events_test.rs  mcp_models_test.rs  mcp_server_test.rs  mcp_update_event_test.rs  timezone_tests.rs
